--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.zerock</groupId>
 	<artifactId>controller</artifactId>
-	<name>ex02</name>
+	<name>Board</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>11</java-version>
 		<org.springframework-version>5.0.7.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.6.10</org.aspectj-version>
-		<org.slf4j-version>1.6.6</org.slf4j-version>
+		<org.aspectj-version>1.9.0</org.aspectj-version>	<!-- AOP 관련 버전 향상-->
+		<org.slf4j-version>1.7.25</org.slf4j-version>	<!-- AOP 관련 버전 향상-->
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -33,40 +33,44 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
-		<!-- json 추가 -->
-		<!-- url 뒤에 .json 을 넣으면 json데이터로 출력이 된다. https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-		<dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>2.9.6</version>
-		</dependency>
-
-		<!-- Rest 컨트롤러의 기본값이 xml처리 https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
-		<dependency>
-		    <groupId>com.fasterxml.jackson.dataformat</groupId>
-		    <artifactId>jackson-dataformat-xml</artifactId>
-		    <version>2.9.6</version>
-		</dependency>
-		
-		<!-- json을 받아서 객체 처리(구글에서 만든 코드) https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-		<dependency>
-		    <groupId>com.google.code.gson</groupId>
-		    <artifactId>gson</artifactId>
-		    <version>2.8.2</version>
-		</dependency>
-				
-		<dependency> <!-- 스프링 테스트 -->
+		<dependency><!-- test 코드 활성화 적용 -->
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${org.springframework-version}</version>
-		</dependency>		
-		
-		<dependency> <!-- lombok 셋팅 : 세터/게터/ToString/생성자 자동 구현용-->
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.24</version>
-			<scope>provided</scope>
 		</dependency>
+		
+		<!-- Test 폴더 필수 코드 -> @Test -> JUnit 메서드 별로 테스트
+			@RunWith(SpringJUnit4ClassRunner.class)	// 메서드별 테스트용(junit4) 
+			@ContextConfiguration("file:src/main/webapp/WEB-INF/spring/root-context.xml")	// 참고할 파일
+			@Log4j2	-->
+			
+		<dependency>	<!-- 트랜젝션 설정 추가 -->
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
+		<dependency>	<!-- 트랜젝션 설정 추가 -->
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>	
+	
+		<dependency>  <!--dto 객체 자동화 lombok 설정-->
+		 <groupId>org.projectlombok</groupId> 
+		 <artifactId>lombok</artifactId> 
+		 <version>1.18.24</version> 
+		 <scope>provided</scope> 
+		 </dependency>		
+		
+				
+			<!-- JDBC 셋팅 1.드라이버 2.커넥션 풀(HikariCP)  3.mybatis(jdbc) 4. jdbclog4j2 -->
+		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
+		<dependency>
+		    <groupId>com.oracle.database.jdbc</groupId>
+		    <artifactId>ojdbc8</artifactId>
+		    <version>23.2.0.0</version>
+		</dependency>	
 		
 		<!-- 커넥션풀용 jdbc https://mvnrepository.com/artifact/hikari-cp/hikari-cp -->
 		<dependency>
@@ -75,12 +79,6 @@
 		    <version>2.7.9</version>
 		</dependency>
 		
-		<!-- Ojdbc8 삽입 https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
-		<dependency>
-		    <groupId>com.oracle.database.jdbc</groupId>
-		    <artifactId>ojdbc8</artifactId>
-		    <version>23.2.0.0</version>
-		</dependency>
 		<!-- root-context.xml 에 삽입
 		 
 		<bean id="hikariConfig" class="com.zaxxer.hikari.HikariConfig">
@@ -99,7 +97,8 @@
 		
 		-->
 
-		<!-- 마이바티스 : jdbc 연동용 https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<!-- 마이바티스 : pstmt의 대체용 = jdbc 연동용 https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<!-- 마이바티스 -->
 		<dependency>
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis</artifactId>
@@ -133,24 +132,38 @@
 		</bean>
 	
 		<mybatis-spring:scan base-package="org.zerock.mapper"/> 
-		sql처리를 mapper에서 찾는다. 
+		"org.zerock.mapper" -> 매핑용 인터페이스 위치
+		sql처리를 mapper에서 찾는다. -> 인터페이스 + xml로 sql 처리 한다.
 				
 		-->
+		
 		<!-- 로그출력을 표형식으로 구현 https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 -->
 		<dependency>
 		    <groupId>org.bgee.log4jdbc-log4j2</groupId>
-		    <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+		    <artifactId>log4jdbc-log4j2-jdbc4</artifactId>
 		    <version>1.16</version>
-		</dependency>
-		
+		</dependency>	
+				
+		<!-- root-context.xml에서 기존 코드 변경
+			<property name="driverClassName" value="net.sf.log4jdbc.sql.jdbcapi.DriverSpy"></property> 
+			<property name="jdbcUrl" value="jdbc:log4jdbc:oracle:thin:@localhost:1521:XE"></property>
+				
+		-->
+				
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
 			<version>${org.aspectj-version}</version>
+		</dependency>
+		
+		<dependency> <!-- AOP설정에서 가장 중요한 라이브러리. -->
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${org.aspectj-version}</version>
 		</dependency>	
 		
-		<!-- Logging : log4j는 취약점 발견으로 사용 안함
+		<!-- Logging 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -191,26 +204,25 @@
 				</exclusion>
 			</exclusions>
 			<scope>runtime</scope>
-		</dependency>
-		-->
+		</dependency>	-->
 		
-		
-		<!-- log4j2 활성화 : src/main/resources에서 log4j2.xml, properties 파일 확인 https://logging.apache.org/log4j/2.x/maven-artifacts.html -->
 		<dependency> 
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-api</artifactId>
-		    <version>2.18.0</version>
-		  </dependency>
-		  <dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-core</artifactId>
-		    <version>2.18.0</version>
-		</dependency>
-	    <dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-slf4j-impl</artifactId>
-		    <version>2.18.0</version>
-  		</dependency>
+		 <groupId>org.apache.logging.log4j</groupId> 
+		 <artifactId>log4j-api</artifactId> 
+		 <version>2.18.0</version> 
+		 </dependency> 
+		 <dependency> 
+		 <groupId>org.apache.logging.log4j</groupId> 
+		 <artifactId>log4j-core</artifactId> 
+		 <version>2.18.0</version> 
+		 </dependency> 
+		 
+		 <dependency> 
+		 <groupId>org.apache.logging.log4j</groupId> 
+		 <artifactId>log4j-slf4j-impl</artifactId> 
+		 <version>2.18.0</version> 
+		 </dependency> 
+		<!-- Logging 2021년 보안 이슈화가 되면서 Log4j2를 사용-->
 
 		<!-- @Inject -->
 		<dependency>
@@ -219,16 +231,14 @@
 			<version>1</version>
 		</dependency>
 				
-		<!-- Servlet -->
-		<!-- 구버전 주석처리함
+		<!-- Servlet 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<version>3.1.0</version>
 			<scope>provided</scope>
-		</dependency>
-		-->
-		<!-- 서블릿 버전 향상 https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		</dependency>	-->
+		
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>javax.servlet-api</artifactId>
@@ -254,7 +264,39 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>
+		
+		<!-- Jackson-databind : 컨트롤러에서 처리된 결과를 json타입으로 프론트에게 보냄 -->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.4</version>
+		</dependency>
+		
+		<!-- 파일 업로드용 코드 -->
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
+		
+		<!-- servlet-context.xml 필수로 추가할 것
+		<beans:bean id="multipartResolver"
+		class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
+		<beans:property name="defaultEncoding" value="utf-8"></beans:property>
+		
+		(1024 * 1024 * 10 bytes 10MB )
+		<beans:property name="maxUploadSize" value="104857560"></beans:property>
+		
+		( 1024 * 1024 * 2 bytes 2MB )
+		<beans:property name="maxUploadSizePerFile"	value="2097152"></beans:property>
+		<beans:property name="uploadTempDir" value="file:/D:/upload/tmp"></beans:property>
+		<beans:property name="maxInMemorySize" value="10485756"></beans:property>
+	</beans:bean>
+	-->
+			        
 	</dependencies>
     <build>
         <plugins>
