--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.zerock</groupId>
 	<artifactId>controller</artifactId>
-	<name>Board</name>
+	<name>AopTest</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>11</java-version>
 		<org.springframework-version>5.0.7.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.9.0</org.aspectj-version>	<!-- AOP 관련 버전 향상-->
-		<org.slf4j-version>1.7.25</org.slf4j-version>	<!-- AOP 관련 버전 향상-->
+		<org.aspectj-version>1.9.0</org.aspectj-version><!-- AOP 관련 버전 향상-->
+		<org.slf4j-version>1.7.25</org.slf4j-version><!-- AOP 관련 버전 향상-->
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -39,11 +39,6 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
-		<!-- Test 폴더 필수 코드 -> @Test -> JUnit 메서드 별로 테스트
-			@RunWith(SpringJUnit4ClassRunner.class)	// 메서드별 테스트용(junit4) 
-			@ContextConfiguration("file:src/main/webapp/WEB-INF/spring/root-context.xml")	// 참고할 파일
-			@Log4j2	-->
-			
 		<dependency>	<!-- 트랜젝션 설정 추가 -->
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -54,7 +49,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 			<version>${org.springframework-version}</version>
-		</dependency>	
+		</dependency>
+		
+		<!-- Test 폴더 필수 코드 -> @Test -> JUnit 메서드 별로 테스트
+			@RunWith(SpringJUnit4ClassRunner.class)	// 메서드별 테스트용(junit4) 
+			@ContextConfiguration("file:src/main/webapp/WEB-INF/spring/root-context.xml")	// 참고할 파일
+			@Log4j2	-->
 	
 		<dependency>  <!--dto 객체 자동화 lombok 설정-->
 		 <groupId>org.projectlombok</groupId> 
@@ -149,8 +149,9 @@
 			<property name="jdbcUrl" value="jdbc:log4jdbc:oracle:thin:@localhost:1521:XE"></property>
 				
 		-->
+		
 				
-		<!-- AspectJ -->
+		<!-- AspectJ -> AOP설정 -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
@@ -204,7 +205,7 @@
 				</exclusion>
 			</exclusions>
 			<scope>runtime</scope>
-		</dependency>	-->
+		</dependency> -->
 		
 		<dependency> 
 		 <groupId>org.apache.logging.log4j</groupId> 
@@ -224,6 +225,7 @@
 		 </dependency> 
 		<!-- Logging 2021년 보안 이슈화가 되면서 Log4j2를 사용-->
 
+
 		<!-- @Inject -->
 		<dependency>
 			<groupId>javax.inject</groupId>
@@ -235,9 +237,9 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>3.1.0</version>
+			<version>2.5</version>
 			<scope>provided</scope>
-		</dependency>	-->
+		</dependency> -->
 		
 		<dependency>
 		    <groupId>javax.servlet</groupId>
@@ -257,7 +259,7 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-	
+		
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -296,7 +298,8 @@
 		<beans:property name="maxInMemorySize" value="10485756"></beans:property>
 	</beans:bean>
 	-->
-			        
+		
+		        
 	</dependencies>
     <build>
         <plugins>
